/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Energinet.DataHub.Edi.Requests.AggregatedMeasureData";

message AggregatedMeasureDataRequest {
  string business_transaction_id = 1;
  optional string settlement_version = 2;
  optional string metering_point_type = 3;
  optional string settlement_method = 4;
  google.protobuf.Timestamp start_of_period = 5;
  optional google.protobuf.Timestamp end_of_period = 6;
  optional string metering_grid_area_domain_id = 7;
  optional string energy_supplier_id = 8;
  optional string balance_responsible_id = 9;
}